# DRF

./: pyproject.toml  pytest.ini  requirements.txt
Recourse/: README.md  angular.json  package-lock.json  package.json
Recourse/src/: index.html  styles.css  styles.css.map  styles.sass
Recourse/src/app/: app-routing.module.ts  app.component.css  app.component.css.map  app.component.html  app.component.sass  app.component.spec.ts  app.component.ts  app.module.ts
Recourse/src/app/create-course/: create-course.component.css  create-course.component.css.map  create-course.component.html  create-course.component.sass  create-course.component.ts
Recourse/src/app/create-lecture/: create-lecture.component.css  create-lecture.component.css.map  create-lecture.component.html  create-lecture.component.sass  create-lecture.component.ts
Recourse/src/app/edit-course/: edit-course.component.css  edit-course.component.css.map  edit-course.component.html  edit-course.component.sass  edit-course.component.ts
Recourse/src/app/edit-lecture/: edit-lecture.component.css  edit-lecture.component.css.map  edit-lecture.component.html  edit-lecture.component.spec.ts  edit-lecture.component.ts
Recourse/src/app/main-page/: main-page.component.css  main-page.component.css.map  main-page.component.html  main-page.component.sass  main-page.component.ts
Recourse/src/app/own-course-list/: own-course-list.component.css  own-course-list.component.css.map  own-course-list.component.html  own-course-list.component.sass  own-course-list.component.spec.ts  own-course-list.component.ts
Recourse/src/app/shared/: auth.guard.ts  auth.service.ts  authconfig.interceptor.ts  lecture.service.ts  lecture.ts  ticket.service.ts  ticket.ts  user.service.ts  user.ts
Recourse/src/app/show-course/: show-course.component.css  show-course.component.css.map  show-course.component.html  show-course.component.sass  show-course.component.ts
Recourse/src/app/signin/: signin.component.css  signin.component.html  signin.component.sass  signin.component.ts
Recourse/src/app/signup/: signup.component.css  signup.component.css.map  signup.component.html  signup.component.sass  (+1 more)
api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210531_2326.py  0003_auto_20210602_0844.py  0004_auto_20210602_0852.py  0005_auto_20210607_0630.py  0006_alter_user_user_status.py
api/tests/: user_create_test.py  user_permissions_test.py
online_courses/: sett.env  settings.py  urls.py  wsgi.py
(+9 files in other folders)
