[tool.poetry]
name = "online_courses"
version = "1.0.0b"
description = "Online courses API."
authors = ["Eugene Prikhach <eugeneprikhach@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
