[tool.poetry]
name = "online_courses"
version = "1.0.0b"
description = "Online courses API."
authors = ["Eugene Prikhach <eugeneprikhach@icloud.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
appdirs = "1.4.4"
asgiref = "3.3.4"
attrs = "21.2.0"
CacheControl = "0.12.6"
cachy = "0.3.0"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
cleo = "0.8.1"
clikit = "0.6.2"
coreapi = "2.3.3"
coreschema = "0.0.4"
crashtest = "0.3.1"
cryptography = "3.4.7"
defusedxml = "0.7.1"
distlib = "0.3.2"
Django = "3.2.3"
django-rest-swagger = "2.2.0"
django-templated-mail = "1.1.1"
djangorestframework = "3.12.4"
djangorestframework-jsonapi = "4.2.0"
djangorestframework-simplejwt = "4.7.0"
djoser = "2.1.0"
docutils = "0.17.1"
drf-yasg = "1.20.0"
filelock = "3.0.12"
html5lib = "1.1"
idna = "2.10"
inflection = "0.3.1"
iniconfig = "1.1.1"
itypes = "1.2.0"
Jinja2 = "3.0.1"
keyring = "21.8.0"
lazy-object-proxy = "1.6.0"
lockfile = "0.12.2"
loguru = "0.5.3"
MarkupSafe = "2.0.1"
msgpack = "1.0.2"
oauthlib = "3.1.0"
openapi-codec = "1.3.2"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.7.0"
pluggy = "0.13.1"
poetry = "1.1.6"
poetry-core = "1.0.3"
psycopg2 = "2.8.6"
ptyprocess = "0.7.0"
py = "1.10.0"
pycparser = "2.20"
pylev = "1.4.0"
PyMySQL = "1.0.2"
pyparsing = "2.4.7"
pytest = "6.2.4"
pytest-assert-utils = "0.2.2"
pytest-common-subject = "1.0.5"
pytest-drf = "1.1.2"
pytest-fixture-order = "0.1.3"
pytest-lambda = "1.2.4"
python-dotenv = "0.17.1"
python3-openid = "3.2.0"
pytz = "2021.1"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
requests-toolbelt = "0.9.1"
"ruamel.yaml" = "0.17.4"
"ruamel.yaml.clib" = "0.2.2"
shellingham = "1.4.0"
simplejson = "3.17.2"
six = "1.16.0"
social-auth-app-django = "4.0.0"
social-auth-core = "4.1.0"
sqlparse = "0.4.1"
toml = "0.10.2"
tomlkit = "0.7.2"
uritemplate = "3.0.1"
urllib3 = "1.26.5"
virtualenv = "20.4.7"
webencodings = "0.5.1"
wrapt = "1.12.1"
psycopg2-binary = "^2.8.6"
pytest-django = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
